--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+### ADDITIONAL
+# VS Code workspace
+*.code-workspace
+
+
+### DEFAULT PYTHON
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
