--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,8 @@ classifiers = [  # Optional
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3 :: Only",
 ]
-dependencies = [ # Optional
-  "peppercorn"
+dependencies = [
+  "psutil>=5.0,<6.0",
 ]
 
 
