--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,6 @@ test = ["pytest"]
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.ruff]
+line-length = 88
