--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
 
 
 [project.optional-dependencies]
-dev = ["check-manifest"]
+dev = ["check-manifest", "pytest"]
 test = ["pytest"]
 
 [project.urls]  # Optional
@@ -44,6 +44,12 @@ test = ["pytest"]
 
 # [tool.setuptools]
 # package-data = {"sample" = ["*.dat"]}
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+addopts = [
+    "--import-mode=importlib",
+]
 
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
