--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,10 +1,10 @@
-name: Lint-with-Black
+# name: Lint-with-Black
 
-on: [push, pull_request]
+# on: [push, pull_request]
 
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: psf/black@stable
+# jobs:
+#   lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: psf/black@stable
