--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
 
 
 [project.optional-dependencies]
-dev = ["check-manifest", "pytest"]
+dev = ["check-manifest", "pytest", "mkdocs-material", "mkdocstrings[python]"]
 test = ["pytest"]
 
 [project.urls]  # Optional
