--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,7 @@
+# Some config options here are taken from the docs for Equinox.
+# See: https://github.com/patrick-kidger/equinox/blob/main/mkdocs.yml
+# for an example of a project with lovely docs =)
+
 site_name: SmartMultiprocessing
 site_url: https://smartmultiprocessing.org
 site_author: Emily Hunt
@@ -11,28 +15,31 @@ repo_name: smartmultiprocessing
 theme:
     name: material
     features:
-          - navigation.sections  # Sections are included in the navigation on the left.
-          - toc.integrate  # Table of contents is integrated on the left; does not appear separately on the right.
-          - header.autohide  # header disappears as you scroll
+        - navigation.sections  # Sections are included in the navigation on the left.
+        - toc.integrate  # Table of contents is integrated on the left; does not appear separately on the right.
+        - header.autohide  # header disappears as you scroll
+        - search.suggest  # Suggested search
+        - search.highlight
+        - search.share
     palette:
         # Light mode / dark mode
         # We deliberately don't automatically use `media` to check a user's preferences. We default to light mode as
         # (a) it looks more professional, and (b) is more obvious about the fact that it offers a (dark mode) toggle.
         - scheme: default
-          primary: white
+          primary: indigo
           accent: amber
           toggle:
             icon: material/weather-night
             name: Switch to dark mode
         - scheme: slate
-          primary: black
+          primary: indigo
           accent: amber
           toggle:
             icon: material/weather-sunny
             name: Switch to light mode
     icon:
         repo: fontawesome/brands/github  # GitHub logo in top right
-        logo: "material/circle-opacity"  # Equinox logo in top left
+        logo: "material/lightbulb-outline"
     favicon: "_static/favicon.png"
 
 markdown_extensions:
@@ -46,3 +53,21 @@ markdown_extensions:
     - toc:
         permalink: "¤"  # Adds a clickable permalink to each section heading
         toc_depth: 4
+
+plugins:
+    - search  # default search plugin; needs manually re-enabling when using any other plugins
+    - autorefs  # Cross-links to headings
+    - mkdocstrings:
+        handlers:
+            python:
+                selection:
+                    inherited_members: true  # Allow looking up inherited methods
+                rendering:
+                    show_root_heading: true  # actually display anything at all...
+                    show_root_full_path: true  # display "diffrax.asdf" not just "asdf"
+                    show_if_no_docstring: true
+                    show_signature_annotations: true
+                    show_source: false  # don't include source code
+                    members_order: source  # order methods according to their order of definition in the source code, not alphabetical order
+                    heading_level: 4
+    # - privacy  # Not installed error???
