--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,8 @@ dependencies = [
 
 
 [project.optional-dependencies]
-dev = ["check-manifest", "pytest", "mkdocs-material", "mkdocstrings[python]>=0.18", "pytkdocs[numpy-style]>=0.5.0"]
-docs = ["mkdocs-material", "mkdocstrings[python]>=0.18", "pytkdocs[numpy-style]>=0.5.0"]  # For building docs on GitHub
+dev = ["check-manifest", "pytest", "mkdocs-material", "mkdocstrings[python]>=0.18"]
+docs = ["mkdocs-material", "mkdocstrings[python]>=0.18"]  # For building docs on GitHub
 test = ["pytest"]
 
 [project.urls]  # Optional
